Update About page with enhanced personal story and research focus

--- a/about.html
+++ b/about.html
@@ -28,9 +28,15 @@
 
   <main class="container prose">
     <h1>About Me</h1>
-    <p>I began my PhD as a hobby to stay engaged, and it soon grew into a passion for knowledge and self-learning. For me, learning is a way to keep pace with social and technological change while exploring what it means to be human.</p>
-    <p>I'm fascinated by the human mind—its choices, behaviors, and their impact across society and finance. Professionally, I work as a data architect, and outside of research I actively tutor high school students in math and science through outstanding non-profits.</p>
-    <p>This site is where I share that journey through essays, blogs, and reflections drawn from both lived and learned experiences.</p>
+    <p>I began my PhD as a hobby. It soon grew into a passion for knowledge and self-learning. For me, learning is a way to keep pace with social and technological change while exploring what it means to be human.</p>
+    <p>I'm fascinated by the human mind, its choices, behaviors, short term and long term memory storage turning into unconscious mind. </p>
+    <p>
+      I work as a data architect professionally and research the intersection of technology and human behavior. My first research is asset-pricing and behavioral finance - rational vs irrational decision making.</p>
+    <p>I will share essays, blogs discussion threads and reflections drawn from both lived and learned experiences.</p>
+
+    <p>
+      I hope to see you around!
+    </p>
     
     <div style="text-align: center; margin-top: 40px;">
       <img src="assets/profile.jpeg" alt="Ajay Zhimire" style="width: 200px; height: 200px; border-radius: 50%; border: 3px solid var(--border); object-fit: cover;">
