Add wide-field-photo class to Field Journal image for proper styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </article>
 
       <article class="card">
-          <img src="assets/maxJ.jpg" alt="Jayna, Sawon and Max the German Shepherd exploring nature together">
+          <img src="assets/maxJ.jpg" alt="Jayna, Sawon and Max the German Shepherd exploring nature together" class="wide-field-photo">
           <h2>Field Journal: Wandering with Jayna, Sawon & Max</h2>
         <div class="meta">Sep 12, 2025 · 5 min read · <span class="badge">Nature</span></div>
         <p>Watching Jayna and Sawon explore the world alongside Max, our 3.5-year-old German Shepherd, reveals the profound magic that happens when children and dogs connect with nature together.</p>
@@ -175,4 +175,4 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+</html> 
