Create modular follow component and update navigation
- Add follow.js with enhanced follow functionality
- Update navigation to remove Subscribe/Archive links
- Add follow widget to index.html
- Prepare for dedicated follow.html page
- Update footer with consistent navigation links

--- a/about.html
+++ b/about.html
@@ -20,8 +20,7 @@
       <nav class="menu">
         <a href="index.html">Home</a>
         <a class="active" href="about.html">About</a>
-        <a href="archive.html">Archive</a>
-        <a href="mailto:hello@ajayzhimire.app">Subscribe</a>
+        <a href="follow.html">Follow</a>
       </nav>
     </div>
   </header>
