--- a/follow.html
+++ b/follow.html
@@ -29,7 +29,7 @@
     <section class="hero">
       <span class="kicker">Stay Connected</span>
       <h1>Follow AJZ Storybook</h1>
-      <p>Join a growing community of curious minds. Get notified when new stories, experiments, and discoveries are shared.</p>
+      <p>Please help us grow our community! By interacting with our friends, families and neighbors and the entire globe. Get notified when new stories, experiments, and discoveries are shared.</p>
     </section>
 
     <!-- Main Follow Component -->
