Simplify footer across all pages

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
   <footer class="footer">
     <div class="container">
-      © <span data-year></span> AJZ Storybook.
+      © <span data-year></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajayzhimire.app">ajayzhimire.app</a>
     </div>
   </footer>
   <script src="script.js"></script>
