--- a/[page].html
+++ b/[page].html
@@ -1,15 +1,5 @@
-  <footer class="footer">
+<footer class="footer">
     <div class="container">
-      <div class="footer-content">
-        <div class="footer-main">
-          © <span data-year></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajayzhimire.app">ajayzhimire.app</a>
-        </div>
-        <div class="footer-follow">
-          <span>Quick Links:</span>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="follow.html">Follow</a>
-        </div>
-      </div>
+      © <span data-year"></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajayzhimire.app">ajayzhimire.app</a>
     </div>
   </footer>
