--- a/about.html
+++ b/about.html
@@ -27,13 +27,17 @@
   <main class="container prose">
     <h1>About Me</h1>
     <p>I began my PhD as a hobby. It soon grew into a passion for knowledge and self-learning. For me, learning is a way to keep pace with social and technological change while exploring what it means to be human.</p>
-    <p>I'm fascinated by the human mind, its choices, behaviors, short term and long term memory storage turning into unconscious mind. </p>
+    <p>I'm fascinated by the human mind, its choices, behaviors, short term and long term memory storage. </p>
     <p>
-      I work as a data architect professionally and research the intersection of technology and human behavior. My first research is asset-pricing and behavioral finance - rational vs irrational decision making.</p>
+      I work as a data architect professionally and research the intersection of technology and human behavior. My first research is asset-pricing and behavioral finance, rational vs irrational decision making.</p>
     <p>I will share essays, blogs discussion threads and reflections drawn from both lived and learned experiences.</p>
 
     <p>
       I hope to see you around!
+    </p>
+
+    <p style="margin-top: 30px;">
+      <strong>Get in touch:</strong> <a href="mailto:ajayzhimire@yahoo.com">ajayzhimire@yahoo.com</a>
     </p>
     
     <div style="text-align: center; margin-top: 40px;">
