Hide wandering card by commenting it out
- Comment out the Field Journal: Wandering with Jayna, Sawon & Max card
- Keep content preserved for potential future use
- Simplify main page to focus on sound science content

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </div>
       </article>
 
+      <!-- Hidden: Field Journal Wandering Card
       <article class="card">
           <img src="assets/maxJ.jpg" alt="Jayna, Sawon and Max the German Shepherd exploring nature together" class="wide-field-photo">
           <h2>Field Journal: Wandering with Jayna, Sawon & Max</h2>
@@ -117,6 +118,7 @@
           </div>
         </div>
       </article>
+      -->
     </section>
 
     <!-- Dr. Jane Goodall Tribute -->
