Add Sawon atoms showcase page and word-cloud link; update styles and script

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
       <span class="kicker">Welcome</span>
       <h1>Learn, share and grow!</h1>
       <p>Experiments in learning: transforming math lessons with stories rather than numbers, exploring new topics that can be practiced and shared.</p>
+
+      <!-- Word cloud (By Doin' -a Sawon's Chemistry Corner.) -->
+      <div class="word-cloud-wrap" aria-hidden="false">
+        <div id="wordCloud" class="word-cloud" aria-hidden="true"></div>
+        <div class="word-cloud-fallback visually-hidden" id="wordCloudFallback">By Doin' -a Sawon's Chemistry Corner.</        # check current branch and status
+        git branch --show-current
+        git status --porcelain
+        
+        # stage all changes, commit with a concise message, and push
+        git add .
+        git commit -m "Add Sawon atoms showcase page and word-cloud link; update styles and script"
+        git push origin $(git branch --show-current)div>
+      </div>
     </section>
 
     <!-- Thought of the Day -->
