add pages making up Index.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About — AJZ Storybook</title>
   <meta name="description" content="About AJZ Storybook">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="scripts/styles.css">
 </head>
 <body>
   <header class="header">
@@ -50,6 +50,6 @@
       © <span data-year></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajayzhimire.app">ajayzhimire.app</a>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
