--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Archive — AJZ Storybook</title>
   <meta name="description" content="Archive of posts for AJZ Storybook">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="scripts/styles.css">
 </head>
 <body>
   <header class="header">
@@ -44,6 +44,6 @@
       © <span data-year></span> AJZ Storybook.
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
