--- a/post.html
+++ b/post.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sample Post — AJZ Storybook</title>
   <meta name="description" content="A sample post page">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="scripts/styles.css">
 </head>
 <body>
   <header class="header">
@@ -53,6 +53,6 @@
       © <span data-year></span> AJZ Storybook.
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
