--- a/sawon-atoms.html
+++ b/sawon-atoms.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sawon's Atoms — Under Construction</title>
   <meta name="description" content="Sawon's Atoms showcase — under construction">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="scripts/styles.css">
   <style>
     /* Minimal, page-specific tweaks */
     .uc-hero { max-width: 800px; margin: 36px auto; padding: 28px; text-align: center; border-radius: 12px; background: linear-gradient(180deg,#fff,#fbf8ff); box-shadow: 0 6px 18px rgba(11,22,33,0.04); }
@@ -71,6 +71,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
