--- a/MindLab_Week1_Auditory/index.html
+++ b/MindLab_Week1_Auditory/index.html
@@ -226,6 +226,6 @@
   <div>© <span id="year"></span> Mind Lab — Built for Ajay</div>
 </footer>
 
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
