--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div data-include="pages/young-scientists.html"></div>
 
-      <div data-include="pages/tribute.html"></div>
+      <!-- <div data-include="pages/tribute.html"></div> -->
     </main>
 
     <div data-include="partials/footer.html"></div>
