Add follow card with modular includes and recursive loading

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
       <div data-include="pages/young-scientists.html"></div>
 
+      <!-- <div data-include="partials/follow-card.html"></div> -->
+
       <!-- <div data-include="pages/tribute.html"></div> -->
     </main>
 
