Add Hunger in North Texas event page with RSVP QR code and announcement card

--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
     <link rel="alternate" type="application/rss+xml" title="AJZ Storybook RSS" href="rss.xml">
   </head>
 
-  <body><!------------------------------------------>
+  <body>
     <div data-include="partials/header.html"></div>
 
     <main class="container">
-      <div data-include="pages/hero.html"></div>
+      <!-- <div data-include="pages/hero.html"></div> -->
+
+      <div data-include="pages/hunger-announcement.html"></div>
 
       <div data-include="pages/today-reflection.html"></div>
 
       <div data-include="pages/young-scientists.html"></div>
-
-      <!-- <div data-include="partials/follow-card.html"></div> -->
-
-      <!-- <div data-include="pages/tribute.html"></div> -->
     </main>
 
     <div data-include="partials/footer.html"></div>
