--- a/pages/hero.html
+++ b/pages/hero.html
@@ -1,15 +1,14 @@
 <section class="hero">
-  <div class="card hero-card">
-    <span class="kicker">Welcome</span>
-    <h2>Learn, share and grow!</h2>
-    <p>Experiments in learning: transforming math lessons with stories rather than numbers, exploring new topics
-      that can be practiced and shared.</p>
-
-    <!-- Word cloud (By Doin' -a Sawon's Chemistry Corner.) -->
-    <div class="word-cloud-wrap" aria-hidden="false">
-      <div id="wordCloud" class="word-cloud" aria-hidden="true"></div>
-      <div class="word-cloud-fallback visually-hidden" id="wordCloudFallback">By Doin' -a Sawon's Chemistry
-        Corner.</div>
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="icon">📚</div>
+      <h3>Learn, Share, and Grow</h3>
+      <p>Join our community panel discussion on hunger and food insecurity in North Texas.</p>
+      <a href="pages/hunger-in-texas.html" class="card-link">Learn More →</a>
     </div>
   </div>
+</div>
+
 </section>
+
