Add hunger panel event, update styles, and remove unused code

--- a/pages/hunger-in-texas.html
+++ b/pages/hunger-in-texas.html
@@ -59,6 +59,11 @@
                 <p><em>In partnership with Toastmasters International and North Texas Food Bank</em></p>
                 <p class="tagline">Awareness leads to action. Action leads to impact.</p>
               </div>
+
+              <div class="officials-invited">
+                <h4>Officials Invited</h4>
+                <p>Invitations have been extended to federal, state, and City of Frisco officials. Attendance is voluntary, and confirmations are pending.</p>
+              </div>
               
               <div class="links">
                 <a href="https://unique.toastmastersclubs.org" target="_blank">unique.toastmastersclubs.org</a> | 
