--- a/pages/hunger-announcement.html
+++ b/pages/hunger-announcement.html
@@ -3,8 +3,10 @@
     <span class="thought-label">📢 Upcoming Event</span>
     <blockquote>"Join us for a crucial conversation on Hunger in North Texas - A Public Panel Discussion on Food Insecurity with <a href="https://ntfb.org" target="_blank">North Texas Food Bank</a>"</blockquote>
     <div class="thought-meta">
-      <small>Friday, January 30, 2026 • 7:00 AM - 7:45 AM • 
-        <a href="pages/hunger-in-texas.html">📋 Learn More & RSVP</a>
+      <small>
+        Friday, January 30, 2026 • 7:00 AM - 7:45 AM • 
+        <a href="pages/hunger-in-texas.html">📋 Learn More &amp; RSVP</a> • 
+        <a href="/hunger-panel-event.ics" download>📅 Add to Calendar</a>
       </small>
     </div>
   </div>
