Replace ajayzhimire@yahoo.com with contact@ajayzhimire.app

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
         </p>
 
         <p style="margin-top: 30px;">
-          <strong>Get in touch:</strong> <a href="mailto:ajayzhimire@yahoo.com">ajayzhimire@yahoo.com</a>
+          <strong>stay in touch:</strong> <a href="mailto:contact@ajayzhimire.app">contact@ajayzhimire.app</a>
         </p>
         
         <div style="text-align: center; margin-top: 40px;">
