--- a/pages/hunger-in-texas.html
+++ b/pages/hunger-in-texas.html
@@ -40,7 +40,7 @@
                       <img src="../assets/rsvp-qr-code.png" alt="RSVP QR Code" class="qr-code-small">
                     </div>
                     <p class="rsvp-email-link">
-                      <a href="mailto:UniqueTMFrisco@gmail.com,ajayzhimire@yahoo.com?subject=RSVP%20-%20Hunger%20in%20North%20Texas%20Event">
+                      <a href="mailto:UniqueTMFrisco@gmail.com,contact@ajayzhimire.app?subject=RSVP%20-%20Hunger%20in%20North%20Texas%20Event">
                         📧 Email RSVP
                       </a>
                     </p>
