--- a/pages/today-reflection.html
+++ b/pages/today-reflection.html
@@ -7,5 +7,5 @@
     </div>
   </div>
   <!-- Wide sunset photo under Today's Reflection -->
-  <img src="../assets/placeholder.jpg" alt="Beautiful sunset landscape" class="wide-sunset">
+  <img src="../assets/sunset.jpg" alt="Beautiful sunset landscape" class="wide-sunset">
 </section>
